--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^2.5.1",
     "axios": "0.18.1",
+    "codemirror": "^5.59.2",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
