--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://192.168.166.128:600/api/'
+VUE_APP_BASE_API = 'http://localhost:6008/'
